# jellydrone2025

./: CMakeLists.txt  README.md  camera_node.cpp  imu_serial_publisher_node.cpp  jellydrone_joystick.cpp  package.xml  serial_bridge.cpp
jellydrone_arduino/: jellydrone_arduino.ino
launch/: jellydrone.launch.py
